--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <li class="nav-item"><a class="nav-link" href="#contact">Kontak</a></li>
         </ul>
         <div class="d-flex align-items-center ms-lg-3 gap-2">
-          <a href="#" class="btn btn-sm btn-outline-secondary" target="_blank" rel="noreferrer"><i class="bi bi-file-earmark-arrow-down"></i> CV</a>
+          <a href="doc/CV.pdf" class="btn btn-sm btn-outline-secondary" target="_blank" rel="noreferrer"><i class="bi bi-file-earmark-arrow-down"></i> CV</a>
           <button id="themeToggle" class="btn btn-sm btn-accent" type="button"><i class="bi bi-moon-stars"></i> Tema</button>
         </div>
       </div>
