--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <li class="nav-item"><a class="nav-link" href="#about">Tentang</a></li>
           <li class="nav-item"><a class="nav-link" href="#skills">Skill</a></li>
           <li class="nav-item"><a class="nav-link" href="#projects">Proyek</a></li>
-          <li class="nav-item"><a class="nav-link" href="#experience">Pengalaman</a></li>
+          <li class="nav-item"><a class="nav-link" href="#experience">Pendidikan</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Kontak</a></li>
         </ul>
         <div class="d-flex align-items-center ms-lg-3 gap-2">
@@ -170,15 +170,15 @@
   <!-- Experience / Education -->
   <section id="experience" class="py-5 bg-body-tertiary">
     <div class="container">
-      <h2 class="section-title mb-4">Pengalaman & Pendidikan</h2>
+      <h2 class="section-title mb-4">Pendidikan</h2>
       <div class="row g-4">
         <div class="col-lg-6">
           <h5 class="mb-3"><i class="bi bi-mortarboard me-2"></i>Pendidikan</h5>
           <div class="timeline">
-              <h6 class="mb-1">SMAN 105 Jakarta <span class="text-secondary fw-normal"></span></h6>
+              <h6 class="mb-1">SMAN 105 Jakarta <span class="text-secondary fw-normal">Jurusan IPA</span></h6>
               <small class="text-secondary">2022 – sekarang</small>
               <span></span>
-              <h6 class="mb-1">S1 – Rekayasa Perangkat Lunak <span class="text-secondary fw-normal">• Universitas Bina Sarana Informatika</span></h6>
+              <h6 class="mb-1"> Universitas Bina Sarana Informatika <span class="text-secondary fw-normal">• S1 – Rekayasa Perangkat Lunak</span></h6>
               <small class="text-secondary">2022 – sekarang</small>
           </div>
         </div>
@@ -194,8 +194,12 @@
           <h2 class="section-title mb-3">Kontak</h2>
           <p>Ingin kerja sama atau punya pertanyaan? Kirim pesan melalui form ini atau email langsung ke :</p>
           <div class="d-flex flex-column gap-2">
-            <span><i class="bi bi-envelope me-2"></i>fahrezagants34@gmail.com</span>
-            <span><i class="bi bi-telephone me-2"></i>+62 857-7307-2471</span>
+            <a href="mailto:fahrezagants34@gmail.com" class="link-muted">
+                <i class="bi bi-envelope me-2 text-danger"></i> fahrezagants34@gmail.com
+            </a>
+            <a href="https://wa.me/6285773072471" target="_blank">
+              <i class="bi bi-whatsapp me-2 text-success"></i> +62 857-7307-2471
+            </a>
             <span><i class="bi bi-geo-alt me-2"></i>Jakarta Timur, Jakarta, Indonesia</span>
           </div>
         </div>
