--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           <h5 class="mb-3"><i class="bi bi-mortarboard me-2"></i>Pendidikan</h5>
           <div class="timeline">
               <h6 class="mb-1">SMAN 105 Jakarta <span class="text-secondary fw-normal">Jurusan IPA</span></h6>
-              <small class="text-secondary">2022 – sekarang</small>
+              <small class="text-secondary">2019 – 2022</small>
               <span></span>
               <h6 class="mb-1"> Universitas Bina Sarana Informatika <span class="text-secondary fw-normal">• S1 – Rekayasa Perangkat Lunak</span></h6>
               <small class="text-secondary">2022 – sekarang</small>
